--- a/sculpture_translations.html
+++ b/sculpture_translations.html
@@ -12,10 +12,6 @@
             text-align: center;
             padding: 20px;
         }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 30px;
-        }
         .translations {
             display: flex;
             flex-direction: column;
@@ -26,7 +22,6 @@
     </style>
 </head>
 <body>
-    <h1>Скульптура на разных языках</h1>
     <div class="translations">
         <div>sculpture</div>
         <div>雕塑 (diāosù)</div>
@@ -45,17 +40,30 @@
         <div>சில்பம் (silpam)</div>
         <div>điêu khắc</div>
         <div>శిల్పం (shilpam)</div>
+        <div>تمثال (timthāl)</div>
         <div>scultura</div>
         <div>skulptūra</div>
+        <div>雕塑 (diāosù)</div>
         <div>skulptuur</div>
         <div>sculptura</div>
         <div>socha</div>
+        <div>sculptura</div>
         <div>skulptura</div>
+        <div>sculptura</div>
+        <div>sculptura</div>
+        <div>scultura</div>
         <div>art</div>
+        <div>雕塑 (diāosù)</div>
+        <div>heykel</div>
         <div>رسوم (rasam)</div>
         <div>szobor</div>
         <div>mojassameh</div>
+        <div>雕塑 (diāosù)</div>
         <div>raṁbhaṭa (raṁbhāṭa)</div>
+        <div>часто детей</div>
+        <div>hormahtak</div>
+        <div>джунтия</div>
+        <div>taffseunk</div>
     </div>
 </body>
 </html>
